--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,83 +5,85 @@
     --accent-2: #FFFFFF;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--primary-color);
-    max-width: 1200px;
+* {
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-header {
-    background-color: var(--primary-color);
-    color: var(--accent-2);
-    padding: 10px 0;
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: var(--primary-color);
+    max-width: 1200px;
+
 }
 
 nav a {
-    color: var(--accent-2);
+    color: var(--accent-1);
     text-decoration: none;
-    margin: 0 15px;
+    font-size: 1.2em;
+    font-weight: 600;
 }
 
-nav a:hover {
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3em;
+    font-weight: 400;
     color: var(--accent-1);
 }
 
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+    font-weight: 600;
+    color: var(--accent-1);
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    color: var(--primary-color);
+}
+
 .hero {
-    position: relative;
+position: relative;
 }
 
 .hero img {
-    width: 100%;
-    display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .hero h1 {
     position: absolute;
-    top: 20%;
-    left: 10%;
+    width: 100%;
+    top: 2%;
     color: var(--accent-2);
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
+    text-align: center;
+    padding: 10px 0;
 }
 
 .hero article {
     position: absolute;
-    bottom: 10%;
-    left: 10%;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    max-width: 400px;
-}
+    
+    top: 30%;
+    margin: 0 100px 0 100px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    height: 170px;
+    width: auto;
+  }
 
 .hero article img {
+    max-width: 23%;
+    height: auto;
     float: right;
-    margin-left: 20px;
+    
 }
 
-h2 {
-    color: var(--secondary-color);
-}
-
-p {
-    color: var(--primary-color);
-}
-
-footer {
-    background-color: var(--primary-color);
-    color: var(--accent-2);
-    text-align: center;
-    padding: 20px 0;
-}
-
-footer a {
-    color: var(--accent-2);
-    text-decoration: none;
-    margin: 0 10px;
-}
-
-footer a:hover {
-    color: var(--accent-1);
+.hero article p{
+    margin: 0;
 }
