--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,20 +7,31 @@
 } 
 
 nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    
     background-color: var(--primary-color);
-    padding: 10px;
+    padding: 1rem;
 }
 
 nav a {
     color: var(--secondary-color);
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #fff;
 }
 
 h1 {
     color: var(--highlight-color);
 }
-
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
 main img {
     width: 150px;
     height: auto;
@@ -33,12 +44,23 @@ p {
     padding: 0;
 }
 
-main{
+header, .grid, footer {
     max-width: 840px;
+    margin: 0 auto;
 }
+
+.grid {
+    display: grid;
+    align-items: center;
+  
+}
+
 
 aside {
     width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row:  1/2;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
