Adjusted to Meetup Rubric

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,13 +23,15 @@ body {
 /* Header Styles */
 header {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    padding: 10px;
+    justify-content: end;
+    padding: 15px;    
 }
 
 .logo {
     max-width: 100px;
+    margin-left: 25px;
 }
 
 nav {
@@ -41,121 +43,19 @@ nav {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 4rem;
 }
 
 .navigation a {
     text-decoration: none;
-    font-weight: bold;
-    color: var(--accent-1);
-    font-size: 1.2em;
-}
-
-/* Heading Styles */
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3em;
-    font-weight: 400;
-    color: var(--accent-1);
-}
-
-h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2em;
     font-weight: 600;
-    color: var(--accent-1);
-}
-
-/* Paragraph Styles */
-p {
-    font-family: 'Open Sans', sans-serif;
+    color: var(--primary-color);
     font-size: 1em;
-    color: var(--primary-color);
-}
-
-/* History Section */
-.history {
-    margin: 2rem 1rem;
-    background-color: var(--secondary-color);
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-}
-
-.history h2 {
-    border-bottom: 2px solid var(--accent-1);
-    text-align: center;
-}
-
-/* Story Section */
-.story {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.story p {
-    text-align: left;
-}
-
-.story img {
-    width: 100%;
-    height: auto;
-    margin: 10px;
     padding: 10px;
-    align-self: center;
-}
-
-.story p {
-    text-align: left;
-    margin: 10;
-}
-
-/* Adventure Section */
-.adventure {
-    max-height: 500px;
-    padding: 2rem 1rem;
-    background-color: var(--primary-color);
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    margin-bottom: 20px;
+    background-color: var(--accent-1);
 }
 
-.adventure h2 {
-    padding-bottom: 20px;
-}
-
-.adventure figure {
-    margin: 0;
-    background-color: var(--accent-2);
-    border-radius: 8px;
-    overflow: hidden;
-}
-
-.adventure img {
-    width: 100%;
-    max-height: auto;
-    padding: 0 10px 10px;
-    border-radius: 8;
-} 
-
-figcaption {
-    padding: 10px;
-    text-align: center;
-    color: var(--primary-color);
-    font-weight: bold;
-}
-
-/* Gallery Section */
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(5, minmax(50px, 1fr));
-    justify-content: space-evenly;
-    gap: 10px;
-}
 
 /* Hero Section */
 .hero {
@@ -165,6 +65,7 @@ figcaption {
 .hero img {
     width: 100%;
     height: 100%;
+    border-radius:8px 8px 0 0;
     object-fit: cover;
 }
 
@@ -198,6 +99,113 @@ figcaption {
     margin: 0;
 }
 
+
+/* Heading Styles */
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3em;
+    font-weight: 400;
+    color: var(--accent-1);
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+    font-weight: 600;
+    color: var(--accent-1);
+}
+
+/* Paragraph Styles */
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    color: var(--primary-color);
+}
+
+
+/* History Section */
+.history {
+    margin: 20px auto;
+    background-color: var(--secondary-color);
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+}
+
+.history h2 {
+    border-bottom: 2px solid var(--accent-1);
+    text-align: center;
+    padding-bottom: 10px;;
+}
+
+.story {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.story p {
+    text-align: left;
+}
+
+.story img {
+    width: 100%;
+    height: auto;
+    margin: 10px;
+    padding: 10px;
+    align-self: center;
+}
+
+.story p {
+    text-align: left;
+    margin: 10;
+}
+
+/* Adventure Section */
+.adventure {
+    max-height: 500px;
+    padding: 2rem 1rem;
+    background-color: var(--primary-color);
+    border-radius:8px 8px 0 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.adventure h2 {
+    padding-bottom: 20px;
+}
+
+.adventure figure {
+    margin: 0;
+    background-color: var(--accent-2);
+    border-radius: 8px;
+   
+}
+
+.adventure img {
+    width: 100%;
+    max-height: auto;
+    border-radius: 8;
+} 
+
+figcaption {
+    padding: 5px;
+    text-align: center;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+/* Gallery Section */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(50px, 1fr));
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
 /* Footer Section */
 footer {
     display: flex;
@@ -205,7 +213,7 @@ footer {
     align-items: center;
     background-color: var(--secondary-color);
     color: var(--accent-2);
-    padding: 10px;
+    padding: 15px;
     margin-bottom: 2px;
     border-radius: 0 0 8px 8px;
 }
@@ -215,8 +223,9 @@ footer a {
 }
 
 footer img {
-    max-width: 15px;
+    max-width: 25px;
     height: auto;
+    margin-left: 20px;    
 }
 
 footer p {
@@ -228,4 +237,6 @@ footer p {
     justify-content: space-evenly;
     align-self: center;
 }
+
+
 
