--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -29,6 +29,21 @@ header {
     padding: 15px;    
 }
 
+.contact_heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px 0 0 550px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+  }
+.contact_heading p {
+    color: var(--accent-2);
+    padding: 0 0 20px 0;
+}
+
 .logo {
     max-width: 100px;
     margin-left: 25px;
@@ -57,48 +72,6 @@ nav {
 }
 
 
-/* Hero Section */
-.hero {
-    position: relative;
-}
-
-.hero img {
-    width: 100%;
-    height: 100%;
-    border-radius:8px 8px 0 0;
-    object-fit: cover;
-}
-
-.hero h1 {
-    position: absolute;
-    width: 100%;
-    top: 5%;
-    color: var(--accent-2);
-    background-color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    padding: 10px 0;
-}
-
-.hero article {
-    position: absolute;
-    top: 30%;
-    margin: 0 100px;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 10px;
-    height: 170px;
-    width: auto;
-}
-
-.hero article img {
-    max-width: 23%;
-    height: auto;
-    float: right;
-}
-
-.hero article p {
-    margin: 0;
-}
-
 
 /* Heading Styles */
 h1 {
@@ -115,6 +88,15 @@ h2 {
     color: var(--accent-1);
 }
 
+h3 {
+
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--accent-1);
+    text-align: center;
+}
+
 /* Paragraph Styles */
 p {
     font-family: 'Open Sans', sans-serif;
@@ -123,41 +105,88 @@ p {
 }
 
 
-/* History Section */
-.history {
-    margin: 20px auto;
+/* Form Section */
+.form_box {
+    display: flex;
+    justify-content: start;
+    gap: 15rem;
+    border: 1px solid var(--secondary-color);
+    margin: 20px 0;
+    flex-wrap: wrap;
+  }
+  
+  .contact_form {
+    margin-top: 65px;
+  }
+  aside {
+    margin: 0;
+    padding: 65px 15px 15px 15px;
     background-color: var(--secondary-color);
-    border-radius: 0 0 8px 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-}
+  }
 
-.history h2 {
-    border-bottom: 2px solid var(--accent-1);
+  aside p{
+    color: var(--accent-2);
     text-align: center;
-    padding-bottom: 10px;;
-}
-
-.story {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    justify-content: space-around;
-    align-items: center;
-}
+    margin-bottom: 20px;
+  }
 
 
-.story img {
+  .container_inp {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px 0;
+    color: var(--primary-color);
+  }
+    
+  
+  .custom-radio input[type="radio"]:checked:before {
+    background-color: var(--primary-color);
+    border: 2px solid var(--secondary-color);
+  }
+  
+
+
+  .container textarea {
+    margin: 20px 0;
     width: 100%;
-    height: auto;
-    margin: 10px;
     padding: 10px;
-    align-self: center;
-}
+    margin: 30px 0;
+    background: var(--accent-2);
+    border-radius: .3rem;
+    border: 1px solid var(--primary-color);
+  
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    padding: 5px;
+    background: var(--accent-2);
+    border-radius: .3rem;
+    border: 1px solid var(--primary-color);
+  }
+  
+  button {
+    margin: 25px 0;
+    width: 150px;
+    height: 40px;
+    background: var(--accent-1);
+    border-radius: .5rem;
+    color: var(--primary-color);
+    font-size: 1.2rem;
+    font-weight: 600;
+    border: 1px solid var(--accent-1);
+  }
 
-.story p {
-    text-align: left;
+iframe {
+    margin-bottom: 0;
+    border: none;
 }
+  
+
+
+
 
 /* Adventure Section */
 .adventure {
@@ -216,8 +245,10 @@ footer {
 
 footer a {
     margin-left: 10px;
-}
-
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--accent-2);
+  }
 footer img {
     max-width: 25px;
     height: auto;
@@ -233,6 +264,11 @@ footer p {
     justify-content: space-evenly;
     align-self: center;
 }
+
+  
+  
+
+
 
 
 
