--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -105,6 +105,84 @@ p {
 }
 
 
+.hero {
+    position: relative;
+}
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    border-radius:8px 8px 0 0;
+    object-fit: cover;
+}
+
+.hero h1 {
+    position: absolute;
+    width: 100%;
+    top: 5%;
+    color: var(--accent-2);
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    padding: 10px 0;
+}
+
+.hero article {
+    position: absolute;
+    top: 30%;
+    margin: 0 100px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    height: 170px;
+    width: auto;
+}
+
+.hero article img {
+    max-width: 23%;
+    height: auto;
+    float: right;
+}
+
+.hero article p {
+    margin: 0;
+}
+
+/* History Section */
+.history {
+    margin: 20px auto;
+    background-color: var(--secondary-color);
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+}
+
+.history h2 {
+    border-bottom: 2px solid var(--accent-1);
+    text-align: center;
+    padding-bottom: 10px;;
+}
+
+.story {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.story img {
+    width: 100%;
+    height: auto;
+    margin: 10px;
+    padding: 10px;
+    align-self: center;
+}
+
+.story p {
+    text-align: left;
+}
+
+
 /* Form Section */
 .form_box {
     display: flex;
@@ -266,9 +344,3 @@ footer p {
 }
 
   
-  
-
-
-
-
-
