--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -71,6 +71,15 @@ nav {
     background-color: var(--accent-1);
 }
 
+.navigation a: {
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--primary-color);
+    font-size: 1em;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: var(--accent-1);
+}
 
 
 /* Heading Styles */
@@ -554,3 +563,8 @@ tr:nth-child(even) {
 tr:hover {
     background-color: rgba(95, 126, 140, 0.2);
 }
+
+nav a.active {
+    background-color: var(--primary-color);
+    color: var(--accent-1);
+}  
